fix mobile width / layout issues
* set explicit max width on sections,
* allow social links to flex wrap,
* reduce social links padding (TODO:
  revert if "too close together" issue gets worse)

--- a/src/_includes/critical.css
+++ b/src/_includes/critical.css
@@ -447,6 +447,10 @@ small {
     padding: 0;
   }
 
+  ul.social-links a {
+    padding: 0.5em;
+  }
+
   .skills-wrapper {
     padding-left: 0;
   }
